# cpp-ping-pong

./: .gitignore  CMakeLists.txt  README.md
Includes/SDL/: SDL_system.h
Modules/: FindSDL2.cmake
Source/: Beeper.cpp  Beeper.h  Core.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Timer.cpp  Timer.h  Vector2.cpp  Vector2.h  main.cpp
